add places to map

--- a/src/pages/trip/trip.scss
+++ b/src/pages/trip/trip.scss
@@ -1,3 +1,32 @@
-page-trip {
 
+.plain {
+    position: absolute;
+}
+.back{
+    // background-color: red;
+    height:30vh;
+    background-image:url(../../assets/imgs/1.jpg);
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+  
+}
+.location-icon{
+    height: 7vh;
+    width:7vh;
+}
+
+.plain {
+    position: absolute;
+}
+.back1{
+    // background-color: red;
+    height:30vh;
+    background-image:url(../../assets/imgs/4.jpg);
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+  
+}
+.location-icon1{
+    height: 7vh;
+    width:7vh;
 }
