--- a/src/pages/hotels/hotels.scss
+++ b/src/pages/hotels/hotels.scss
@@ -1,3 +1,16 @@
-page-hotels {
 
+.plain {
+    position: absolute;
+}
+.hotel1{
+    // background-color: red;
+    height:30vh;
+    background-image:url(../../assets/imgs/5.jpg);
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+  
+}
+.hotel-icon{
+    height: 7vh;
+    width:7vh;
 }
