add vehicle placeses and hotels

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,3 +1,31 @@
-page-about {
+.plain {
+    position: absolute;
+}
+.vehicle1{
+    // background-color: red;
+    height:30vh;
+    background-image:url(../../assets/imgs/7.jpg);
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+  
+}
+.vehicle-icon1{
+    height: 7vh;
+    width:7vh;
+}
 
+.plain {
+    position: absolute;
+}
+.vehicle2{
+    // background-color: red;
+    height:30vh;
+    background-image:url(../../assets/imgs/8.jpg);
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+  
+}
+.vehicle-icon2{
+    height: 7vh;
+    width:7vh;
 }
