--- a/src/pages/hotels/hotels.scss
+++ b/src/pages/hotels/hotels.scss
@@ -14,3 +14,19 @@
     height: 7vh;
     width:7vh;
 }
+
+.plain {
+    position: absolute;
+}
+.hotel2{
+    // background-color: red;
+    height:30vh;
+    background-image:url(../../assets/imgs/6.jpg);
+    background-size:100% 100%;
+    background-repeat: no-repeat;
+  
+}
+.hotel-icon1{
+    height: 7vh;
+    width:7vh;
+}
