--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,4 +1,12 @@
 page-contact {
+    .scroll {
+        height: 100%
+    }
+
+    #map {
+        width: 100%;
+        height: 100%;
+    }
 
 }
 
